--- a/nueva.html
+++ b/nueva.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style_2.css">
     <title>¡Alerta de Phishing!</title>
 </head>
 <body>
@@ -19,7 +19,7 @@
         <div class="container-fluid">
             <div class="container">
                 <div class="logo">
-                    <img src="Logo_SVG.svg" class="img-logo">
+                    <img src="img/Logo_SVG.svg" class="img-logo">
                 </div>
                 <div class="content">
                     <p> Es muy importante que conozca las características de un correo electrónico de PHISHING. ¿Cómo podías haberlo notado? </p>
