Actualizando plantilla de email

--- a/email.html
+++ b/email.html
@@ -15,8 +15,12 @@
     </header>
 
     <section class="mail-body">
-        <h1>¿Te gustaría Ganar un Full Day a Margarita?</h1>
-        <p>Responde la <em>Trivia</em> para optar al premio de un <b>FULL DAY</b> a <b>MARGARITA</b></p>
+        <h1>¿Te gusta la Salsa?</h1>
+        <p>Nos encontramos <em>Rifando</em> dos (2) entradas para el concierto <b>LA SALSA</b></p>
+        <p>en <b>EL POLIEDRO DE CARACAS</b></p>
+        <div>
+            <img class="img-promo" src="/img/salsaccs_2.jpg" alt="">
+        </div>
         <p>El premio será válido para dos (2) personas.</p>
         <h1>NO DEJES QUE TE LO CUENTEN!!!</h1>
         <h4>PARTICIPAR ES MUY FACIL.</h4>
