Adding nuevos ejemplos

--- a/email_2.html
+++ b/email_2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,16 +15,15 @@
     </header>
 
     <section class="mail-body">
-        <h1>¿ Te gusta la Bailar ?</h1>
-        <p>Nos encontramos <em>Rifando</em> dos (2) entradas para el concierto <b>"LA SALSA"</b></p>
-        <p>en el <b>POLIEDRO DE CARACAS</b></p>
+        <h1>¿ Te gustaría actualizar tu Dispositivo Móvil ?</h1>
+        <p>Esta es tu oportunidad para <em>Renovar</em> tu equipo celular por uno totalmente <b>"NUEVO"</b></p>
+        <p>patrocinado por <b>SOYTECHNO</b></p>
         <div class="promo">
-            <!-- <img class="img-promo-2" src="/img/salsaccs.jpg" alt=""> -->
-            <img class="img-promo" src="/img/salsaccs_2.jpg" alt="">
+            <img class="img-promo-3" src="/img/soytechno_1.jpg" alt="">
         </div>
         <!-- <p>El premio será válido para la primera persona .</p> -->
-        <h1>¡¡¡ NO DEJES DE PARTICIPAR !!!</h1>
-        <h4>Ingresa a Conectados y responde las preguntas.</h4>
+        <h1>¡¡¡ PARTICIPA YA - CUPOS LIMITADOS !!!</h1>
+        <h4>Ingresa al siguiente enlace y llena el formulario.</h4>
         <h4 class="goto"><a href="http://172.19.148.205:8081/">Accede AQUÍ</a></h4>
     </section>
 
